updated navbar & made separate component files

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1264,3 +1264,7 @@ details[open] .arrow-icon {
     background-repeat: no-repeat;
   }
 }
+
+.scrollbar::-webkit-scrollbar {
+    display: none;
+}
