--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1396,4 +1396,6 @@ details[open] .arrow-icon {
     justify-content: center;
     align-items: center;
 }
-
+.boxshad{
+    box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.05);
+}
