--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,21 +36,19 @@
   display: none;
 }
 
-.MuiStepConnector-vertical {
-    position: relative;
-    height: "1.25rem";
-    line-height: "1.25rem";
-}
-
 .Mui-completed, .Mui-active {
     position: relative;
 }
 
 .Mui-completed .MuiStepConnector-lineVertical, .Mui-active .MuiStepConnector-lineVertical  {
     position: absolute;
-    height: 130px;
-    top: -30px;
+    height: 110px;
+    top: -28px;
     border-left-width: 2px;
     border-color: #177DF0;
     left: -3px;
+}
+
+.css-17k0r75 .QontoStepIcon-circle{
+  display: none;
 }
