--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,11 +42,21 @@
 
 .Mui-completed .MuiStepConnector-lineVertical, .Mui-active .MuiStepConnector-lineVertical  {
     position: absolute;
-    height: 110px;
+    height: 140px;
     top: -28px;
     border-left-width: 2px;
     border-color: #177DF0;
     left: -3px;
+}
+@media (max-width:450px) {
+  .Mui-completed .MuiStepConnector-lineVertical, .Mui-active .MuiStepConnector-lineVertical  {
+    position: absolute;
+    height: 170px;
+    top: -28px;
+    border-left-width: 2px;
+    border-color: #177DF0;
+    left: -3px;
+  }
 }
 
 .css-17k0r75 .QontoStepIcon-circle{
