--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1399,3 +1399,36 @@ details[open] .arrow-icon {
 .boxshad{
     box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.05);
 }
+
+
+
+.css-1lhlv3u .QontoStepIcon-circle{
+    display: none;
+}
+
+.Mui-completed, .Mui-active {
+    position: relative;
+}
+
+.Mui-completed .MuiStepConnector-lineVertical, .Mui-active .MuiStepConnector-lineVertical  {
+    position: absolute;
+    height: 140px;
+    top: -28px;
+    border-left-width: 2px;
+    border-color: #177DF0;
+    left: -3px;
+}
+@media (max-width:450px) {
+    .Mui-completed .MuiStepConnector-lineVertical, .Mui-active .MuiStepConnector-lineVertical  {
+        position: absolute;
+        height: 170px;
+        top: -28px;
+        border-left-width: 2px;
+        border-color: #177DF0;
+        left: -3px;
+    }
+}
+
+.css-17k0r75 .QontoStepIcon-circle{
+    display: none;
+}
