--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1434,3 +1434,10 @@ details[open] .arrow-icon {
 .css-17k0r75 .QontoStepIcon-circle{
     display: none;
 }
+
+
+.shad5{
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 10px 32px 72px 0px rgba(51, 51, 51, 0.03);
+}
