--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1304,5 +1304,19 @@ left:12px;
 }
 
 
-/* CSS */
 
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.pulse {
+    animation: pulse 1s infinite; /* Adjust the duration as needed */
+}
