--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1329,7 +1329,7 @@ left:12px;
 }
 
 .toggleButton {
-    background-color: #8184EB;
+    background-color: #4854B6;
     color: #fff;
     border: none;
     border-radius: 30%;
