--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1389,3 +1389,22 @@ left:12px;
     display: flex;
     border: 1.5px solid transparent;
 }
+
+
+@keyframes scrollRightToLeft {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+.brands-container {
+    animation: scrollRightToLeft 20s linear infinite; /* Adjust the duration and timing function as needed */
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.brand-item {
+    /* Your existing styles for brand items */
+}
