--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1391,18 +1391,18 @@ left:12px;
 }
 
 
-//@keyframes scrollRightToLeft {
-//    0% {
-//        transform: translateX(100%);
-//    }
-//    100% {
-//        transform: translateX(-100%);
-//    }
-//}
-//.brands-container {
-//    animation: scrollRightToLeft 30s linear infinite;
-//    white-space: nowrap;
-//    overflow: hidden;
-//}
+@keyframes scrollRightToLeft {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+.brands-container {
+    animation: scrollRightToLeft 30s linear infinite;
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 
