--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1406,3 +1406,34 @@ left:12px;
 }
 
 
+
+/* carousel.css */
+.carousel-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height:60px;
+}
+
+.carousel-track {
+    display: flex;
+    animation: slide 20s linear infinite; /* Adjust the animation duration as needed */
+}
+
+.carousel-item {
+    flex: 0 0 auto;
+    width: 200px;
+    height: 50px; /* Set the height of each item as needed */
+    margin-right: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.06);
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
