--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1691,4 +1691,30 @@ left:12px;
     }
 }
 
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+.transition-text {
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflow text */
+    animation: slide-text 5s linear forwards; /* Apply animation */
+}
+
+@keyframes slide-text {
+    0% {
+        transform: translateX(-100%); /* Start offscreen to the left */
+    }
+    100% {
+        transform: translateX(0); /* Move text to its original position */
+    }
+}
+
+
 
