--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1726,3 +1726,168 @@ left:12px;
     white-space: normal;
 }
 
+.blog-parser-body {
+    div {
+        max-width: 100% !important;
+    }
+
+    & * {
+        font-family: 'Poppins' !important;
+    }
+
+    a {
+        transition: linear .2s;
+
+        &:hover {
+            color: blue !important;
+            text-decoration: underline;
+        }
+    }
+
+    h2 {
+        margin: 20px 0;
+        font-weight: 600;
+        font-size: 16px !important;
+        line-height: 24px !important;
+        letter-spacing: 1.42px !important;
+        @media (min-width: 767px) {
+            font-size: 22px !important;
+        }
+        @media (min-width: 1023px) {
+            font-size: 30px !important;
+            line-height: 45px !important;
+        }
+        @media (min-width: 1200px) {
+            font-size: 35px !important;
+            line-height: 53px !important;
+        }
+    }
+
+    h3 {
+        margin: 20px 0;
+        font-weight: 500;
+        font-size: 16px !important;
+        line-height: 24px !important;
+        letter-spacing: 1.42px !important;
+        @media (min-width: 767px) {
+            font-size: 20px !important;
+        }
+        @media (min-width: 1023px) {
+            font-size: 25px !important;
+            line-height: 40px !important;
+        }
+        @media (min-width: 1200px) {
+            font-size: 30px !important;
+            line-height: 44px !important;
+        }
+    }
+
+    h4 {
+        margin: 20px 0;
+        font-weight: 500;
+        font-size: 16px !important;
+        line-height: 24px !important;
+        letter-spacing: 1.42px !important;
+        @media (min-width: 767px) {
+            font-size: 18px !important;
+        }
+        @media (min-width: 1023px) {
+            font-size: 22px !important;
+            line-height: 35px !important;
+        }
+        @media (min-width: 1200px) {
+            font-size: 24px !important;
+            line-height: 38px !important;
+        }
+    }
+
+    p, span {
+        margin: 10px 0;
+        font-size: 10px !important;
+        line-height: 15px !important;
+        letter-spacing: .6px !important;
+        @media (min-width: 767px) {
+            font-size: 12px !important;
+        }
+        @media (min-width: 1023px) {
+            font-size: 14px !important;
+            line-height: 27px !important;
+        }
+        @media (min-width: 1200px) {
+            font-size: 16px !important;
+        }
+    }
+
+    ul {
+        li {
+            display: flex;
+            flex-wrap: wrap;
+            padding-left: 10px;
+            position: relative;
+
+            &:before {
+                left: 0;
+                top: 10px;
+                width: 4px;
+                height: 4px;
+                content: "";
+                position: absolute;
+                border-radius: 50%;
+                background: #5B6570;
+            }
+
+            ul {
+                width: 100%
+            }
+        }
+
+        a {
+            transition: linear .2s;
+
+            &:hover {
+                color: blue !important;
+                text-decoration: underline;
+            }
+        }
+
+        ul {
+            padding-left: 18px;
+        }
+
+        & * {
+            margin: 5px 0;
+            display: block;
+            color: #5B6570 !important;
+            font-size: 10px !important;
+            line-height: 15px !important;
+            letter-spacing: .6px !important;
+        }
+
+        @media (min-width: 767px) {
+            & * {
+                font-size: 12px !important;
+            }
+            li {
+                &:before {
+                    top: 10px;
+                }
+            }
+        }
+        @media (min-width: 1023px) {
+            & * {
+                font-size: 14px !important;
+                line-height: 27px !important;
+            }
+            li {
+                &:before {
+                    top: 15px;
+                }
+            }
+        }
+        @media (min-width: 1200px) {
+            & * {
+                font-size: 16px !important;
+            }
+        }
+    }
+}
